# flowsurgeon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  books_fastapi.db  flowsurgeon_fastapi.db-shm  flowsurgeon_fastapi.db-wal  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-css-design-system/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-routes-pages/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-security-documentation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/03.1-ui-polish-professional-look-breadcrumb-fix-light-mode-shadcn-filter-pills/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-CONTEXT.md  03.1-RESEARCH.md  03.1-UI-SPEC.md  03.1-VALIDATION.md
.planning/phases/04-announcement-assets/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: analysis.md  debug_0.5.0.md  plan.md  ui.pen
docs/announcements/: hacker-news.md  reddit.md  x-thread.md
examples/fastapi/: demo_fastapi.py
examples/flask/: demo_flask.py
scripts/: capture_assets.py
src/flowsurgeon/: __init__.py  _http.py  profiling.py
src/flowsurgeon/core/: __init__.py  config.py  records.py
src/flowsurgeon/middleware/: __init__.py  asgi.py  wsgi.py
src/flowsurgeon/storage/: __init__.py  async_sqlite.py  base.py  sqlite.py
src/flowsurgeon/trackers/: __init__.py  base.py  context.py  dbapi.py  sqlalchemy.py
src/flowsurgeon/ui/: __init__.py  panel.py
src/flowsurgeon/ui/assets/: panel.css  panel.js
src/flowsurgeon/ui/templates/: base.html  detail.html  home.html  panel.html  route_detail.html
src/flowsurgeon/ui/templates/partials/: detail_profile.html  detail_sql.html  detail_traceback.html
tests/: test_asgi.py  test_profiling.py  test_query_tracking.py  test_wsgi.py
