[project]
name = "flowsurgeon"
version = "0.1.0"
description = "FlowSurgeon — framework-agnostic profiling middleware for Python (WSGI & ASGI)."
readme = "README.md"
authors = [{ name = "Samandar-Komilov", email = "voidpointer07@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
