[project]
name = "flowsurgeon"
version = "0.6.0"
description = "FlowSurgeon — framework-agnostic profiling middleware for Python (WSGI & ASGI)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Samandar-Komilov", email = "voidpointer07@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.0"]
keywords = [
    "wsgi",
    "asgi",
    "middleware",
    "profiling",
    "debugging",
    "fastapi",
    "flask",
    "starlette",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/vpcraft/flowsurgeon"
Repository = "https://github.com/vpcraft/flowsurgeon"
Issues = "https://github.com/vpcraft/flowsurgeon/issues"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0"]
examples = [
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "sqlalchemy>=2.0",
    "uvicorn>=0.41.0",
]
screenshots = ["playwright>=1.40"]
